# fstlog

./: .gitignore  CMakeLists.txt  README.md
examples/formatter_config/: CMakeLists.txt  formatter_config.cpp
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/log_calls/: CMakeLists.txt  log_calls.cpp
examples/multi_threaded/: CMakeLists.txt  multi_threaded.cpp
examples/sink_output/: CMakeLists.txt  sink_output.cpp
fstlog/: CMakeLists.txt
fstlog/cmake/: fstlogConfig.cmake.in  libfstlog.pc.in
fstlog/include/fstlog/: compatible.hpp  core.hpp  version.hpp
fstlog/include/fstlog/detail/: aggregate_type.hpp  api_def.hpp  array_concat.hpp  array_copy.hpp  char_type.hpp  constants.hpp  convert_to_basic_string_view.hpp  error_handling.hpp  fast_to_str.hpp  fnv_hash.hpp  fstlog_assert.hpp  fstlog_ex.hpp  has_input_iterator.hpp  hash_type.hpp  internal_arg_header.hpp  internal_msg_header.hpp  is_char_type.hpp  is_pow2.hpp  is_stdarray.hpp  is_string_like.hpp  is_tuple.hpp  level.hpp  log2_size.hpp  log_buffer.hpp  log_element_type.hpp  log_metaargs.hpp  log_policy.hpp  log_type.hpp  log_type_metadata.hpp  malloc_allocator.hpp  noexceptions.hpp  padded_size.hpp  padded_t.hpp  pmr_allocator.hpp  rm_cvref_t.hpp  small_string.hpp  str_hash_fnv.hpp  type_signature.hpp  types.hpp  ut_cast.hpp
fstlog/include/fstlog/filter/: filter.hpp
fstlog/include/fstlog/formatter/: formatter.hpp  formatter_null.hpp  formatter_stdformat.hpp  formatter_txt.hpp  formatter_txt_fast.hpp
fstlog/include/fstlog/logger/: log_macro.hpp  log_macro_nometa.hpp  log_policy_guaranteed.hpp  log_policy_lowlatency.hpp  log_policy_nonguaranteed.hpp  logger.hpp  logger_mt.hpp  logger_st.hpp  logger_st_fix.hpp
fstlog/include/fstlog/logger/detail/: can_log_type.hpp  is_nested_type.hpp  log_arg_size.hpp  log_arg_size_compile_time.hpp  log_element_counter_overhead.hpp  log_element_payload_size.hpp  logger_base_mixin.hpp  logger_buffer_mixin.hpp  logger_buffer_thread_local_mixin.hpp  logger_channel_compile_time_mixin.hpp  logger_channel_mixin.hpp  logger_core_mixin.hpp  logger_dropcount_mixin.hpp  logger_dropcount_null_mixin.hpp  logger_dropcount_st_mixin.hpp  logger_level_atomic_mixin.hpp  logger_level_compile_time_mixin.hpp  logger_level_mixin.hpp  logger_msgsize_mixin.hpp  logger_msgsize_thread_local_mixin.hpp  logger_name_compile_time_mixin.hpp  logger_name_mixin.hpp  logger_thread_compile_time_mixin.hpp  logger_thread_mixin.hpp  logger_thread_query_mixin.hpp  logger_thread_thread_local_mixin.hpp  logger_writer_mixin.hpp  stamp_chrono_mixin.hpp  this_thread_id.hpp  this_thread_str.hpp  write_arg.hpp  write_var.hpp
fstlog/include/fstlog/output/: output.hpp  output_console.hpp  output_cstream.hpp  output_file.hpp  output_null.hpp  output_stream.hpp  output_stream_mt.hpp
fstlog/include/fstlog/sink/: sink.hpp  sink_null.hpp  sink_sort.hpp  sink_unsort.hpp
fstlog/src/: config_buffer.hpp  config_core.hpp  config_formatter_txt.hpp  config_parser.hpp  config_sink.hpp  core.cpp  core_impl.cpp  core_impl.hpp
fstlog/src/detail/: buffer_operation_result.hpp  byte_span.hpp  checked_iterator.hpp  dyn_array.hpp  dyn_buffer.hpp  error.hpp  error_code.hpp  log_buffer.cpp  log_buffer_impl.cpp  log_buffer_impl.hpp  log_buffer_unread_data.hpp  make_allocated.hpp  nearest_pow2.hpp  nothrow_allocate.hpp  safe_reinterpret_cast.hpp  utf8_helper.hpp  utf_conv.hpp
fstlog/src/detail/mixin/: allocator_mixin.hpp  concurrent_use_mixin.hpp  error_state_mixin.hpp  exclusive_use_mixin.hpp  mutex_external_mixin.hpp  mutex_internal_mixin.hpp  reference_counter_mixin.hpp
fstlog/src/filter/: filter.cpp  filter_impl.hpp  filter_internal.hpp  filter_mixin.hpp
fstlog/src/formatter/: formatter.cpp  formatter_interface.hpp  formatter_interface_mixin.hpp  formatter_null.cpp  formatter_stdformat.cpp  formatter_txt.cpp  formatter_txt_fast.cpp
fstlog/src/formatter/impl/: arg_parser_mixin.hpp  formatter_null_mixin.hpp  formatter_txt_mixin.hpp  header_internal_mixin.hpp  input_span_mixin.hpp  logfield_formspec_fmt_mixin.hpp  logfield_formspec_txt_fast_mixin.hpp  logfield_formspec_txt_mixin.hpp  logfield_pos_mixin.hpp  output_span_mixin.hpp
fstlog/src/formatter/impl/detail/: decoder_internal_mixin.hpp  encoder_aggregate_separator_txt_mixin.hpp  encoder_charconv_fast_mixin.hpp  encoder_charconv_mixin.hpp  encoder_stdformat_mixin.hpp  format_setting_txt.hpp  format_setting_txt_fast.hpp  format_str_helper.hpp  format_string_error.hpp  hash_converter_null_mixin.hpp  logfield.hpp  nano_to_seconds_txt.hpp  policy_txt.hpp  severity_txt.hpp  shift_fill.hpp  (+6 more)
fstlog/src/logger/: log_macro_background.hpp  logger_background.hpp
fstlog/src/output/: output.cpp  output_cstream.cpp  output_file.cpp  output_interface.hpp  output_interface_mixin.hpp  output_locked_mixin.hpp  output_null.cpp  output_stream.cpp  output_stream_mt.cpp
fstlog/src/output/impl/: out_cstream_mixin.hpp  out_file_mixin.hpp  out_file_posix.hpp  out_null_mixin.hpp  out_stream_mixin.hpp
fstlog/src/sink/: sink.cpp  sink_flush_time_mixin.hpp  sink_formatter_mixin.hpp  sink_interface.hpp  sink_interface_mixin.hpp  sink_msgblock_mixin.hpp  sink_null.cpp  sink_output_mixin.hpp  sink_sort.cpp  sink_unsort.cpp
fstlog/src/sink/impl/: sink_null_mixin.hpp  sink_sort_mixin.hpp  sink_unsort_mixin.hpp
tests/: CMakeLists.txt  main.cpp
tests/unit_tests/: byte_span.cpp  core.cpp  encoder_charconv_fast_mixin.cpp  encoder_charconv_mixin.cpp  encoder_stdformat_mixin.cpp  filter_internal.cpp  format_str_helper.cpp  internal_arg_header.cpp  log2_size.cpp  log_arg_size.cpp  log_arg_size_compile_time.cpp  log_buffer.cpp  log_compute_msgsize_mixin.cpp  log_element_counter_overhead.cpp  log_level_filter_mixin.cpp  log_noexcept.cpp  logfield_formspec_fmt_mixin.cpp  logger.cpp  logger_dropcount_mixin.cpp  logger_dropcount_st_mixin.cpp  logger_level_atomic_mixin.cpp  logger_mt.cpp  logger_st.cpp  nano_to_seconds_txt.cpp  nearest_pow2.cpp  padded_size.cpp  shift_fill.cpp  small_string.cpp  this_thread_id.cpp  time_to_str_converter.cpp  utf8_helper.cpp  utf_conv.cpp  valid_strftime_string.cpp
(+13 files in other folders)
